Fixed styles for album covers

--- a/src/components/AlbumsComponents/albumsComponent.scss
+++ b/src/components/AlbumsComponents/albumsComponent.scss
@@ -1,7 +1,3 @@
-@import "@material/card/mdc-card";
-@import "@material/button/mdc-button";
-@import "@material/typography/mdc-typography";
-
 .albums {
   max-width: 140rem;
   margin: 0 auto;
@@ -29,17 +25,24 @@
     width: 36rem;
   }
 
-  &__card-artist {
-    font-size: 2.2rem;
-    line-height: 0;
-    padding-left: 2rem;
-    margin: 2rem 0 1.5rem 0;
+  &__description {
+    padding: 1.6rem;
   }
 
   &__card-album {
-    font-size: 1.7rem;
-    padding-left: 2rem;
-    line-height: 0;
-    margin-bottom: 2rem;
+    font-size: 2rem;
+    font-weight: 500;
+    line-height: 3.2rem;
+    letter-spacing: 0.014em;
+    margin: 0;
+  }
+
+  &__card-artist {
+    font-size: 1.4rem;
+    line-height: 3.5rem;
+    font-weight: 500;
+    letter-spacing: 0.00714em;
+    color: rgba(0, 0, 0, 0.54);
+    margin: 0;
   }
 }
